--- a/package.json
+++ b/package.json
@@ -27,5 +27,18 @@
   "bugs": {
     "url": "https://github.com/Paraknight/filewi.re/issues"
   },
-  "homepage": "https://github.com/Paraknight/filewi.re#readme"
+  "homepage": "https://github.com/Paraknight/filewi.re#readme",
+  "devDependencies": {
+    "css-loader": "^0.19.0",
+    "jade": "^1.11.0",
+    "jade-loader": "^0.7.1",
+    "livescript-loader": "^0.1.5",
+    "style-loader": "^0.12.4",
+    "stylus-loader": "^1.3.1",
+    "webpack": "^1.12.2"
+  },
+  "dependencies": {
+    "express": "^4.13.3",
+    "livescript": "^1.4.0"
+  }
 }
