--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "P2P file sharing on the web",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "webpack --progress --colors --watch",
+    "watch": "watchify -d --verbose -t browserify-livescript -g uglifyify -o build/index.min.js src/index.ls",
     "start": "lsc server.ls"
   },
   "repository": {
@@ -29,13 +29,11 @@
   },
   "homepage": "https://github.com/Paraknight/filewi.re#readme",
   "devDependencies": {
-    "css-loader": "^0.19.0",
-    "jade": "^1.11.0",
-    "jade-loader": "^0.7.1",
-    "livescript-loader": "^0.1.5",
-    "style-loader": "^0.12.4",
-    "stylus-loader": "^1.3.1",
-    "webpack": "^1.12.2"
+    "browserify-livescript": "^0.2.3",
+    "d3": "^3.5.6",
+    "uglifyify": "^3.0.1",
+    "watchify": "^3.4.0",
+    "webtorrent": "^0.62.2"
   },
   "dependencies": {
     "express": "^4.13.3",
