--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "devDependencies": {
     "browserify-livescript": "^0.2.3",
     "d3": "^3.5.6",
+    "node-uuid": "^1.4.3",
     "uglifyify": "^3.0.1",
     "watchify": "^3.4.0",
     "webtorrent": "^0.62.2"
