--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "browserify": "^11.2.0",
     "browserify-livescript": "^0.2.3",
     "d3": "^3.5.6",
+    "dropzone": "^4.0.1",
     "jade": "^1.11.0",
     "jadeify": "^4.4.0",
     "node-uuid": "^1.4.3",
